<resources>
    <string name="application_name">App Locker</string>
    <string name="main_share">Share</string>
    <string name="change_pass_tit">Change password</string>
    <string name="change_pass_desc">Enter the new password\n4 or more digits is recommended</string>
    <string name="change_pass_desc_confirmation">Confirm password</string>
    <string name="change_pass_not_match">Passwords do not match</string>
    <string name="change_pass_changed">Password successfully changed</string>
    <string name="change_pass_not_changed">Error changing password</string>
    <string name="change_pass_empty">Error: Empty password</string>
    <string name="select_tit">Select apps to lock</string>
    <string name="locker_footer_default">Enter password to unlock</string>
    <string name="locker_enter_password">Enter password</string>
    <string name="upper_ok">OK</string>
    <string name="upper_back">BACK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_tit">Welcome to Locker!</string>
    <string name="welcome_message">You need a password before you can lock apps.\nDo you want to setup a password now?</string>
    <string name="preferences_tit">Preferences</string>
    <string name="main_preferences">Preferences</string>
    <string name="pref_def_lock_message">Enter password to unlock</string>
    <string name="pref_tit_lock_message">Message</string>
    <string name="pref_desc_lock_message">This message will appear when an app is locked</string>
    <string name="pref_dlgmsg_lock_message">You can use %s to represent the app name</string>
    <string name="pref_tit_start_boot">Start at boot</string>
    <string name="pref_desc_start_boot">Start locking apps when your device starts</string>
    <string name="pref_tit_relock_after_screenoff">Relock after screen off</string>
    <string name="pref_desc_relock_after_screenoff">Ask for a password again after screen is turned off</string>
    <string name="old_pref_tit_vibrate_password">Vibration</string>
    <string name="old_pref_desc_vibrate_password">Vibrate when you press keys</string>
    <string name="pref_tit_performance">Performance</string>
    <string name="pref_desc_performance">Higher performance will be faster, but will consume more battery. Lower performance will be slower but saves battery.</string>
    <string name="pref_list_perf_very_high">Very high</string>
    <string name="pref_list_perf_high">High</string>
    <string name="pref_list_perf_normal">Normal</string>
    <string name="pref_list_perf_low">Low</string>
    <string name="pref_list_perf_very_low">Powersave</string>
    <string name="old_pref_tit_delay_status">Delay lock</string>
    <string name="old_pref_desc_delay_status">When you enter the correct password, next password will be asked after a delay</string>
    <string name="old_pref_tit_delay_time">Delay time</string>
    <string name="old_pref_dlgmsg_delay_time">After this time the password will be asked again (Seconds)</string>
    <string name="applist_lock_all">All</string>
    <string name="applist_unlock_all">None</string>
    <string name="main_rate">Rate</string>
    <string name="pref_desc_show_notification">Show a notification while apps are locked</string>
    <string name="notification_title">Locker is active</string>
    <string name="notification_state_locked">Click here to disable the lock</string>
    <string name="pref_tit_cat_general">General</string>
    <string name="pref_tit_cat_notification">Notification</string>
    <string name="pref_tit_cat_launcher">Start</string>
    <string name="old_pref_tit_dial_launch">Start with call</string>
    <string name="old_pref_desc_dial_launch">When this option is enabled, you can access Locker by dialing #YOURPASSWORD\nThis means that if your password is 1111, you can dial #1111 to open Locker.</string>
    <string name="pref_tit_hide_launcher_icon">Hide icon</string>
    <string name="pref_desc_hide_launcher_icon">When this option is active, Locker will hide it\'s icon from the apps. You can remove shortcuts on your home screen manually (Requires reboot. Forces Start with call)</string>
    <string name="pref_tit_show_notification">Show notification</string>
    <string name="cl_title">What\'s New</string>
    <string name="pref_tit_cat_about">About this app</string>
    <string name="password_change_tit">Change password</string>
    <string name="password_change_head">Enter a new unlock password</string>
    <string name="password_change_confirm">Enter the password again to confirm</string>
    <string name="password_change_saved">Password changed successfully</string>
    <string name="password_change_error">Error saving password</string>
    <string name="password_change_not_match">Passwords do not match</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="pattern_change_tit">Change pattern</string>
    <string name="pattern_detected">Pattern detected</string>
    <string name="pattern_change_head">Draw a new unlock pattern</string>
    <string name="pattern_change_confirm">Draw the pattern again to confirm</string>
    <string name="pattern_change_saved">Pattern changed successfully</string>
    <string name="pattern_change_error">Error saving pattern</string>
    <string name="pattern_change_not_match">Patterns do not match</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_continue">Next</string>
    <string name="button_back">Back</string>
    <string name="main_button_set_password">Change password</string>
    <string name="main_button_set_pattern">Change pattern</string>
    <string name="pref_list_lock_type_password">Password</string>
    <string name="pref_list_lock_type_pattern">Pattern</string>
    <string name="pref_tit_lock_type">Lock Type</string>
    <string name="pref_desc_lock_type">Currently: %s</string>
    <string name="vc_update">Update</string>
    <string name="vc_exit">Exit</string>
    <string name="vc_tit_new_version">Update</string>
    <string name="vc_tit_unsupported">Sorry</string>
    <string name="vc_msg_new_version">There is a new version available, do you want to update now?</string>
    <string name="vc_msg_unsupported">The version you are using of this app is too old and needs to be updated. Please update the app to continue using it.</string>
    <string name="pref_tit_cat_password">Password settings</string>
    <string name="pref_tit_cat_pattern">Pattern settings</string>
    <string name="pref_tit_delay_status">Short exit</string>
    <string name="pref_desc_delay_status">You can exit an app and go back in the limit time without entering a password</string>
    <string name="pref_tit_delay_time">Short exit time</string>
    <string name="pref_dlgmsg_delay_time">Enter the number of seconds after which the apps will be locked again</string>
    <string name="pref_tit_orientation">Orientation</string>
    <string name="pref_tit_vibrate_password">Vibration</string>
    <string name="pref_desc_vibrate_password">Vibrate when you press keys</string>
    <string name="pref_tit_vibrate_pattern">Vibration</string>
    <string name="pref_desc_vibrate_pattern">Vibrate when you slide over the pattern</string>
    <string name="pref_tit_pattern_stealth">Invisible mode</string>
    <string name="pref_desc_pattern_stealth">The pattern will be invisible</string>
    <string name="pref_tit_switch_buttons">Switch buttons</string>
    <string name="pref_desc_switch_buttons">Change the position of the OK and Back buttons</string>
    <string name="pref_list_orientation_portrait">Portrait</string>
    <string name="pref_list_orientation_landscape">Landscape</string>
    <string name="pref_list_orientation_auto_rotate">Auto-rotate</string>
    <string name="pref_list_orientation_system">System setting</string>
    <string name="pref_tit_temp_wifi_unlock_state">Stop with wifi</string>
    <string name="pref_desc_temp_wifi_unlock_state">When you connect to a specific wifi network, (such as home), the lock automatically stops</string>
    <string name="pref_tit_temp_wifi_ssid">SSID (Network name)</string>
    <string name="pref_desc_temp_wifi_ssid">The name of the wifi network</string>
    <string name="beta_tit">Beta</string>
    <string name="beta_desc">This are experimental features which will be available in the future, but you can test them now.</string>
    <string name="main_state_running">Running</string>
    <string name="main_state_not_running">Not running</string>
    <string name="pref_tit_dial_launch">Start with call</string>
    <string name="pref_desc_dial_launch">Access Locker by calling to a custom number.</string>
    <string name="pref_tit_dial_launch_number">Number</string>
    <string name="pref_desc_dial_launch_number">The number you have to call to start Locker (We recommend to start it with a #).</string>
    <string name="vc_later">Later</string>
    <string name="main_no_password">You have not setup a password yet.\nDo you want to setup a password now?</string>
    <string name="main_setup">Setup</string>
    <string name="old_main_choose_lock_type">Choose Lock Type</string>
    <string name="main_no_locked_apps">You have no apps locked.\nDo you want to add some apps now?</string>
    <string name="pref_tit_password_expiry">Maximum time</string>
    <string name="pref_desc_password_expiry">The time you have to enter the correct password</string>
    <string name="pref_dlgmsg_password_expiry">Time is in seconds, 0 is unlimited</string>
    <string name="pref_tit_max_password_retries">Maximum attempts</string>
    <string name="pref_desc_max_password_retries">The number of attempts you have to enter the correct password</string>
    <string name="pref_dlgmsg_max_password_retries">0 is unlimited</string>
    <string name="pref_tit_pattern_color">Pattern color</string>
    <string name="pref_desc_pattern_color">The color of the pattern circles</string>
    <string name="pref_list_pattern_color_white">White</string>
    <string name="pref_list_pattern_color_blue">Blue</string>
    <string name="pref_list_pattern_color_green">Green</string>
    <string name="pref_tit_lockactivity_background">Background</string>
    <string name="pref_desc_lockactivity_background">Background image to be displayed while unlocking apps</string>
    <string name="pref_tit_hide_notification_icon">Hide notification icon</string>
    <string name="pref_desc_hide_notification_icon">This only hides the notification icon in the statusbar</string>
    <string name="update_available">Update available</string>
    <string name="update_needed">Update needed</string>
    <string name="update_available_msg">There is a new update of this app available. The current version will stop working in %d days.</string>
    <string name="update_needed_msg">This version is no longer supported. Please update to the newest version.</string>
    <string name="update_button">Update</string>
    <string name="update_button_cancel">Not now</string>
    <string name="background_locker_blue">Blue</string>
    <string name="background_locker_dark_blue">Dark Blue</string>
    <string name="background_locker_red">Red</string>
    <string name="background_locker_purple">Purple</string>
    <string name="pro_ft_tit">Pro features:</string>
    <string name="pro_header">Choose your plan:</string>
    <string name="pro_tit_ads">Locker Ads</string>
    <string name="pro_desc_ads">All pro features are available and ads are shown</string>
    <string name="pro_tit_free">Locker Free</string>
    <string name="pro_desc_free">No pro features are available and no ads are shown</string>
    <string name="pro_tit_paid">Locker Pro</string>
    <string name="pro_desc_paid">All features are available and you will see no ads</string>
    <string name="apps_menu_sort">Sort</string>
    <string name="apps_menu_lock_all">Lock all</string>
    <string name="apps_menu_unlock_all">Unlock all</string>
    <string name="apps_menu_search">Search</string>
</resources>