<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pro="http://schemas.android.com/apk/res/com.twinone.locker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/prollRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/pro_header"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <org.twinone.locker.ui.ProItemView
            android:id="@+id/proItemFree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:layout_marginLeft="@dimen/element_horizontal_margin"
            android:layout_marginRight="@dimen/element_horizontal_margin"
            android:layout_marginTop="@dimen/element_vertical_margin"
            pro:proDescription="@string/pro_desc_free"
            pro:proTitle="@string/pro_tit_free"
            pro:proTitleColor="@color/pro_item_tit_free" />

        <org.twinone.locker.ui.ProItemView
            android:id="@+id/proItemAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_vertical_margin"
            android:layout_marginLeft="@dimen/element_horizontal_margin"
            android:layout_marginRight="@dimen/element_horizontal_margin"
            android:layout_marginTop="@dimen/element_vertical_margin"
            pro:proDescription="@string/pro_desc_ads"
            pro:proTitle="@string/pro_tit_ads"
            pro:proTitleColor="@color/pro_item_tit_ads" />

        <org.twinone.locker.ui.ProItemView
            android:id="@+id/proItemPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            pro:proDescription="@string/pro_desc_paid"
            pro:proTitle="@string/pro_tit_paid"
            pro:proTitleColor="@color/pro_item_tit_paid" />

        <LinearLayout
            android:id="@+id/prollFeatures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/pro_ft_tit"
                android:textAppearance="@android:style/TextAppearance.Large" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>